force-app/main/default/objects/DeploymentMetadataItem__c/DeploymentMetadataItem__c.object-meta.xml
<CustomObject>
    <description>A Metadata Item contained within a specific Deployment.</description>
    <label>Deployment Metadata Item</label>
    <nameField>
        <displayFormat>DMI-{00000}</displayFormat>
        <label>Deployment Metadata Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Metadata Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>