force-app/main/default/objects/DeploymentMetadataItem__c/fields/MetadataItem__c.field-meta.xml
<CustomField>
    <fullName>MetadataItem__c</fullName>
    <label>Metadata Item</label>
    <referenceTo>MetadataItem__c</referenceTo>
    <relationshipLabel>Deployment Metadata Items</relationshipLabel>
    <relationshipName>Deployment_Metadata_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>